MGS-2561 Fixes to datepicker alignment

--- a/assets/css/calendar.css
+++ b/assets/css/calendar.css
@@ -180,7 +180,7 @@ thead+tbody tr:first-child td {
     display: block;
     opacity: 1;
     /*filter: alpha(opacity=100);*/
-    top: 28px;
+    top: 63px;
     max-height: 260px;
     -webkit-transition: max-height 0.2s;
     -moz-transition: max-height 0.2s;
@@ -212,166 +212,7 @@ thead+tbody tr:first-child td {
     padding-top: 3px;
   }
 }
-@-webkit-keyframes hideCalendar {
-  0% {
-    display: none;
-    left: 290px;
-    opacity: 1;
-    top: 28px;
-  }
-  50% {
-    display: block;
-    left: 290px;
-    opacity: 0;
-    top: 28px;
-  }
-  100% {
-    display: block;
-    left: 290px;
-    opacity: 0;
-    top: -999em;
-  }
-}
-@-moz-keyframes hideCalendar {
-  0% {
-    display: none;
-    left: 290px;
-    opacity: 1;
-    top: 28px;
-  }
-  50% {
-    display: block;
-    left: 290px;
-    opacity: 0;
-    top: 28px;
-  }
-  100% {
-    display: block;
-    left: 290px;
-    opacity: 0;
-    top: -999em;
-  }
-}
-@-o-keyframes hideCalendar {
-  0% {
-    display: none;
-    left: 290px;
-    opacity: 1;
-    top: 28px;
-  }
-  50% {
-    display: block;
-    left: 290px;
-    opacity: 0;
-    top: 28px;
-  }
-  100% {
-    display: block;
-    left: 290px;
-    opacity: 0;
-    top: -999em;
-  }
-}
-@keyframes hideCalendar {
-  0% {
-    display: none;
-    left: 290px;
-    opacity: 1;
-    top: 28px;
-  }
-  50% {
-    display: block;
-    left: 290px;
-    opacity: 0;
-    top: 28px;
-  }
-  100% {
-    display: block;
-    left: 290px;
-    opacity: 0;
-    top: -999em;
-  }
-}
-@-webkit-keyframes showCalendar {
-  0% {
-    display: none;
-    left: 340px;
-    opacity: 0;
-    top: -999em;
-  }
-  50% {
-    display: block;
-    left: 310px;
-    opacity: 0;
-    top: 28px;
-  }
-  100% {
-    display: block;
-    left: 290px;
-    opacity: 1;
-    top: 28px;
-  }
-}
-@-moz-keyframes showCalendar {
-  0% {
-    display: none;
-    left: 340px;
-    opacity: 0;
-    top: -999em;
-  }
-  50% {
-    display: block;
-    left: 310px;
-    opacity: 0;
-    top: 28px;
-  }
-  100% {
-    display: block;
-    left: 290px;
-    opacity: 1;
-    top: 28px;
-  }
-}
-@-o-keyframes showCalendar {
-  0% {
-    display: none;
-    left: 340px;
-    opacity: 0;
-    top: -999em;
-  }
-  50% {
-    display: block;
-    left: 310px;
-    opacity: 0;
-    top: 28px;
-  }
-  100% {
-    display: block;
-    left: 290px;
-    opacity: 1;
-    top: 28px;
-  }
-}
-@keyframes showCalendar {
-  0% {
-    display: none;
-    left: 340px;
-    opacity: 0;
-    top: -999em;
-  }
-  50% {
-    display: block;
-    left: 310px;
-    opacity: 0;
-    top: 28px;
-  }
-  100% {
-    display: block;
-    left: 290px;
-    opacity: 1;
-    top: 28px;
-  }
-}
+
 
 /* DATE PICKER */
 
